--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -2,11 +2,15 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Home</title>
 </head>
 <body>
 <h1>I Am home</h1>
 <h1>I am new Home</h1>
 <button onclick='alert("Hello")'>Greet</button>
+<a href="addCar.html"><button>Add a Car</button></a>
+<a href="viewCar.html"><button>View Car Details</button></a>
+<a href="updateCar.html"><button>Update a Car</button></a>
+<a href="deleteCar.html"><button>Delete a Car</button></a>
 </body>
 </html>
